fix spacing on quantity on mobile

--- a/assets/component-card.css
+++ b/assets/component-card.css
@@ -396,6 +396,7 @@
      display: flex;
      justify-content: center;
      align-items: stretch;
+     gap: 0px;
 }
 
 .qty-box-set .quantity {
